kubernetes-gateway-api-hands-on/exercises/07-tls-termination/exercise/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: secure-route
  namespace: gateway-lab
spec:
  parentRefs:
    - name: lab-gateway
      sectionName: ________
  hostnames:
    - ________
  rules:
    - backendRefs:
        - name: ________
          port: 8080
